# rhex_control

./: .bashrc  .gitmodules
.devcontainer/: .onCreateCommandMarker  Dockerfile  devcontainer.json
ros_ws/src/rhex_control/: CMakeLists.txt  package.xml
ros_ws/src/rhex_control/include/: alternating_tripod.h  buehler_clock.h  cubemars_control.h  cubemars_pi3hat.h  diff_drive.h  pid_controller.h  robot_base.h  robot_node.h  rover.h  rover_node.h
ros_ws/src/rhex_control/scripts/: start_node.sh  sync_files_to_pi.sh
ros_ws/src/rhex_control/src/: alternating_tripod.cpp  buehler_clock.cpp  cubemars_control.cpp  cubemars_pi3hat.cpp  diff_drive.cpp  pi3hat.cpp  pid_controller.cpp  robot_base.cpp  rover.cpp  rover_node.cpp
